--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,34 @@
-name: cent_music
-description: "CENT Music Streaming Platform - High Performance Edition"
+name: supreme_audio_kernel
+description: A high-performance, encrypted audio streaming engine.
 version: 1.0.0+1
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.6
   youtube_explode_dart: ^2.2.2
-  just_audio: ^0.9.42
-  audio_service: ^0.18.15
-  audio_session: ^0.1.21
-  cached_network_image: ^3.4.1
-  flutter_spinkit: ^5.2.1
-  google_fonts: ^6.2.1
-  shared_preferences: ^2.3.2
-  path_provider: ^2.1.4
-  permission_handler: ^11.3.1
+  just_audio: ^0.9.36
+  audio_session: ^0.1.18
+  flutter_spinkit: ^5.2.0
+  cached_network_image: ^3.3.0
+  google_fonts: ^6.1.0
+  provider: ^6.1.1
+  path_provider: ^2.1.2
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
-  
+  fonts:
+    - family: Michroma
+      fonts:
+        - asset: fonts/Michroma-Regular.ttf
+        
