--- a/android/local.properties
+++ b/android/local.properties
@@ -1,1 +1,5 @@
+sdk.dir=/path/to/your/android/sdk
 flutter.sdk=/opt/hostedtoolcache/flutter/3.19.0-stable/x64
+flutter.versionName=1.0.0
+flutter.versionCode=1
+flutter.buildMode=debug
