--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: supreme_audio_kernel
+name: cent
 description: A high-performance, encrypted audio streaming engine.
 version: 1.0.0+1
 publish_to: 'none'
@@ -19,6 +19,8 @@ dependencies:
   provider: ^6.1.1
   path_provider: ^2.1.2
   crypto: ^3.0.3
+  fft: ^0.1.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
