--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,18 +37,22 @@ android {
 
     defaultConfig {
         applicationId "com.cent.music"
+        // minSdkVersion 23 لضمان عمل محركات الصوت والفيزياء المتقدمة
         minSdkVersion 23
         targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        
+        // تفعيل MultiDex ضروري جداً لتطبيقات الـ 50 ألف سطر
         multiDexEnabled true
     }
 
     buildTypes {
         release {
             signingConfig signingConfigs.debug
-            minifyEnabled false
-            shrinkResources false
+            // تفعيل التحسينات لتقليل حجم التطبيق النهائي
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -76,6 +80,11 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    
+    // دعم تشغيل الوسائط في الخلفية والتحكم من شاشة القفل
     implementation 'androidx.media:media:1.7.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    
+    // دعم فك التشفير الصوتي المتقدم
+    implementation 'com.google.android.exoplayer:extension-mediasession:2.19.1'
 }
