--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,9 +1,21 @@
+# Memory Management for 50k+ lines project
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# AndroidX and Modern Libraries Support
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Build Speed Optimizations
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
+
+# Code Style and Standards
 kotlin.code.style=official
+
+# Dependency and Performance Management
 android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=35
+
+# Isolated Projects for faster incremental builds
+android.experimental.privatetrust.is_isolated=true
