--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,14 @@ on:
     branches: [ "main", "master" ]
   pull_request:
     branches: [ "main", "master" ]
+  workflow_dispatch: # يسمح لك بتشغيل البناء يدوياً إذا علق السيرفر
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+    # زيادة مهلة البناء لأن المشروع 50 ألف سطر
+    timeout-minutes: 30 
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -17,7 +20,7 @@ jobs:
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: 'temurin' # تميرين أكثر استقراراً مع أندرويد
           java-version: '17'
           cache: 'gradle'
 
@@ -28,21 +31,24 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: System Preparation & Auto Fix
+      - name: System Preparation & Memory Optimization
         run: |
-          flutter clean
+          flutter config --no-analytics
           flutter pub get
-          dart format .
-          flutter analyze --fatal-infos || true
+          # إصلاح أي تضارب في المكتبات تلقائياً
+          flutter pub upgrade --major-versions || true
 
       - name: Build Android Release APK
+        # هنا السر: زيادة الذاكرة المخصصة لعملية البناء لتتحمل الـ 50 ألف سطر
         run: |
-          flutter build apk --release --no-tree-shake-icons --build-number=${{ github.run_number }}
+          export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=512m"
+          flutter build apk --release --no-tree-shake-icons --obfuscate --split-debug-info=build/app/outputs/symbols
 
       - name: Upload Cent Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Cent-Release-V${{ github.run_number }}
           path: build/app/outputs/flutter-apk/app-release.apk
+          if-no-files-found: error
           retention-days: 7
           
