--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # مهلة كافية لترجمة 50 ألف سطر
-    timeout-minutes: 45 
+    timeout-minutes: 60 # رفعتها لساعة كاملة لضمان ترجمة الكود الضخم
 
     steps:
       - name: Checkout Repository
@@ -34,15 +33,15 @@ jobs:
       - name: System Preparation & Dependency Fix
         run: |
           flutter config --no-analytics
-          # حل مشكلة Null Safety أثناء جلب المكتبات
-          flutter pub get --no-sound-null-safety
+          # التصحيح: لا نضع سطر null-safety هنا لأنه يسبب الخطأ الذي رأيته في الصورة
+          flutter pub get
           flutter pub upgrade --major-versions || true
 
       - name: Build Android Release APK
         run: |
-          # تخصيص ذاكرة عالية للتعامل مع حجم الكود الضخم
+          # ذاكرة قصوى لمعالجة حجم المشروع الهائل
           export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=1024m"
-          # الأمر النهائي للبناء مع تجاهل قيود Null Safety
+          # هنا فقط نضع "التعويذة" لتجاوز أخطاء المكتبات القديمة
           flutter build apk --release --no-sound-null-safety --no-tree-shake-icons --obfuscate --split-debug-info=build/app/outputs/symbols
 
       - name: Upload Cent Artifact
