--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,12 @@ name: Cent Supreme Build Engine
 on:
   push:
     branches: [ "main", "master" ]
-  pull_request:
-    branches: [ "main", "master" ]
   workflow_dispatch: 
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 60 # رفعتها لساعة كاملة لضمان ترجمة الكود الضخم
+    timeout-minutes: 60 
 
     steps:
       - name: Checkout Repository
@@ -28,20 +26,18 @@ jobs:
         with:
           flutter-version: '3.19.0'
           channel: 'stable'
-          cache: true
 
-      - name: System Preparation & Dependency Fix
+      - name: System Preparation
         run: |
           flutter config --no-analytics
-          # التصحيح: لا نضع سطر null-safety هنا لأنه يسبب الخطأ الذي رأيته في الصورة
+          # هنا التصحيح: لا تضع أي إضافات مع pub get
           flutter pub get
           flutter pub upgrade --major-versions || true
 
       - name: Build Android Release APK
         run: |
-          # ذاكرة قصوى لمعالجة حجم المشروع الهائل
           export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=1024m"
-          # هنا فقط نضع "التعويذة" لتجاوز أخطاء المكتبات القديمة
+          # هنا فقط نضع "التعويذة" لتجاوز مشكلة المكتبات القديمة
           flutter build apk --release --no-sound-null-safety --no-tree-shake-icons --obfuscate --split-debug-info=build/app/outputs/symbols
 
       - name: Upload Cent Artifact
@@ -50,5 +46,4 @@ jobs:
           name: Cent-Release-V${{ github.run_number }}
           path: build/app/outputs/flutter-apk/app-release.apk
           if-no-files-found: error
-          retention-days: 7
           
