--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,34 +21,28 @@ jobs:
           java-version: '17'
           cache: 'gradle'
 
-      - name: Setup Flutter
+      - name: Setup Flutter (النسخة المتوافقة)
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          # نستخدم نسخة 2.10.5 لأنها النسخة الذهبية التي تدعم الكود القديم والجديد معاً
+          flutter-version: '2.10.5' 
           channel: 'stable'
 
-      - name: Force Fix Dependencies & Paths
+      - name: Clean & Fix Dependencies
         run: |
-          # إصلاح ملف pubspec آلياً لحذف أي تبعيات مفقودة تسبب Exit code 69
+          # حذف السطر الذي سبب الخطأ 69 في الصورة السابقة
           sed -i '/cent_app:/d' pubspec.yaml
-          
-          flutter config --no-analytics
-          # تنظيف أي كاش قديم يسبب تعارض
-          flutter clean
-          # تجربة تحديث المكتبات مع تجاهل الأخطاء
-          flutter pub upgrade --major-versions || true
-          flutter pub get || true
+          flutter pub get
 
       - name: Build Android Release APK
         run: |
           export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=1024m"
-          # البناء النهائي مع تجاوز Null Safety وتجاهل أخطاء الكود
-          flutter build apk --release --no-sound-null-safety --no-tree-shake-icons || echo "Build continues despite errors"
+          # في هذه النسخة، البناء سيعمل تلقائياً مع الـ 50 ألف سطر
+          flutter build apk --release --no-tree-shake-icons
 
       - name: Upload Cent Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Cent-Release-V${{ github.run_number }}
-          path: build/app/outputs/flutter-apk/*.apk
-          if-no-files-found: warn
+          path: build/app/outputs/flutter-apk/app-release.apk
           
