--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 1.0.0+1
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  # تعديل الـ SDK ليدعم الكود القديم والجديد ويحل مشكلة Null Safety
+  sdk: '>=2.12.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -19,7 +20,8 @@ dependencies:
   provider: ^6.1.1
   path_provider: ^2.1.2
   crypto: ^3.0.3
-  fft: ^0.1.0
+  # تحديث النسخة لحل خطأ "version solving failed" الذي ظهر في الصور
+  fft: ^0.5.1
   permission_handler: ^11.3.1
 
 dev_dependencies:
