--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,19 +24,19 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          # استخدام نسخة مستقرة تدعم أدوات الإصلاح الحديثة
+          # استخدام النسخة التي تدعم أدوات الإصلاح الحديثة
           flutter-version: '3.19.0' 
           channel: 'stable'
           cache: true
 
       - name: Run Master Fixer Script
-        # تشغيل ملف fixer.sh الذي يصلح الـ 50 ألف سطر آلياً قبل البناء
+        # هذه الخطوة ستقوم بتشغيل fixer.sh الذي يحذف سطر cent_app المسبب للخطأ 69
         run: |
           chmod +x fixer.sh
           ./fixer.sh
 
       - name: Build Android Release APK
-        # استخدام الخيارات الإضافية (Extra Options) لتجاوز خطأ "Option not found" في صورتك
+        # استخدام الخيارات الإضافية لتخطي فحص Null Safety الذي أوقف البناء سابقاً
         run: |
           export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=1024m"
           flutter build apk --release \
@@ -48,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Cent-Release-V${{ github.run_number }}
-          # البحث عن أي ملف APK تم إنتاجه بنجاح لضمان عدم ظهور تحذير "No files found"
+          # مسار الرفع المرن لضمان التقاط ملف الـ APK مهما كان اسمه
           path: build/app/outputs/flutter-apk/*.apk
           if-no-files-found: error
           
