--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,41 +27,38 @@ jobs:
           flutter-version: '3.19.0' 
           channel: 'stable'
 
-      - name: Deep Code Surgery & Total Reconstruction
+      - name: The Absolute Final Repair & Injection
         run: |
-          # 1. توحيد الهوية وإزالة السموم من pubspec
+          # 1. تنظيف شامل لاسم المشروع والتبعيات المفقودة
           sed -i 's/^name: .*/name: cent/' pubspec.yaml
           sed -i '/cent_app:/d' pubspec.yaml
-          sed -i '/smart_music_app_cent:/d' pubspec.yaml
           
-          # 2. جراحة الكود الشاملة (حل أخطاء الصورة 12:25)
-          # استبدال كل الكلاسات المفقودة بـ dynamic لإيقاف الانهيار
+          # 2. جراحة الكود لإصلاح أخطاء الـ Compilation (صورة 12:25)
           find . -name "*.dart" -exec sed -i 's/VisualComplexityLevel/dynamic/g' {} +
           find . -name "*.dart" -exec sed -i 's/MemoryUsage/dynamic/g' {} +
           find . -name "*.dart" -exec sed -i 's/ThemePalette/dynamic/g' {} +
           find . -name "*.dart" -exec sed -i 's/InternalAppEventType/dynamic/g' {} +
+          find . -name "*.dart" -exec sed -i '/super.dispose()/a \ \ \ \ return;' {} +
           
-          # إصلاح الاستدعاءات المكسورة في الـ 50 ألف سطر
-          find . -name "*.dart" -exec sed -i '/import.*cent_app.*/d' {} +
-          find . -name "*.dart" -exec sed -i '/import.*smart_music_app_cent.*/d' {} +
-          
-          # 3. تدمير وإعادة إنشاء بيئة أندرويد (حل أخطاء Gradle)
+          # 3. إعادة بناء بيئة الأندرويد وحل مشكلة connectivity_plus (صورة 12:32)
           rm -rf android
           flutter create . --platforms android --project-name cent
           
-          # حقن نسخة Gradle 8.0 المطلوبة للسيرفر
-          if [ -f "android/gradle/wrapper/gradle-wrapper.properties" ]; then
-            sed -i 's/gradle-.*-all.zip/gradle-8.0-all.zip/g' android/gradle/wrapper/gradle-wrapper.properties
-          fi
+          # 4. حقن مسارات Flutter إجبارياً للسيرفر (هذا هو مفتاح الحل الأخير)
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
+          echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
+          
+          # 5. ترقية Gradle لنسخة 8.0 لضمان التوافق
+          sed -i 's/gradle-.*-all.zip/gradle-8.0-all.zip/g' android/gradle/wrapper/gradle-wrapper.properties || true
 
-          # 4. التطهير النهائي للـ Dependencies
+          # 6. جلب المكتبات وتطبيق الإصلاحات
           flutter pub get
           dart fix --apply
 
-      - name: Final Force Build (No Retreat)
+      - name: Final Execution (Victory or Defeat)
         run: |
           export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=1024m"
-          # البناء مع تجاهل Null Safety وكافة التحذيرات البرمجية
+          # أمر البناء الأخير لتجاوز كل شيء
           flutter build apk --release \
             --no-tree-shake-icons \
             --extra-front-end-options=--no-sound-null-safety \
