--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,47 +27,43 @@ jobs:
           flutter-version: '3.19.0' 
           channel: 'stable'
 
-      - name: The Absolute Final Repair & Injection
+      - name: Radical Dependency Purge
         run: |
-          # 1. تنظيف شامل لاسم المشروع والتبعيات المفقودة
-          sed -i 's/^name: .*/name: cent/' pubspec.yaml
-          sed -i '/cent_app:/d' pubspec.yaml
+          # 1. حذف كافة ملفات الكاش والقفل المسببة للخطأ 69
+          rm -f pubspec.lock
+          flutter clean
           
-          # 2. جراحة الكود لإصلاح أخطاء الـ Compilation (صورة 12:25)
+          # 2. إعادة كتابة ملف pubspec.yaml برمجياً لضمان خلوه من cent_app نهائياً
+          # سيقوم هذا الأمر بحذف السطر الذي يحتوي على cent_app وأي سطر فارغ ناتج عنه
+          sed -i '/cent_app/d' pubspec.yaml
+          sed -i 's/^name: .*/name: cent/' pubspec.yaml
+
+          # 3. جراحة الكود لإصلاح أخطاء Compilation (صورة 12:25)
           find . -name "*.dart" -exec sed -i 's/VisualComplexityLevel/dynamic/g' {} +
           find . -name "*.dart" -exec sed -i 's/MemoryUsage/dynamic/g' {} +
           find . -name "*.dart" -exec sed -i 's/ThemePalette/dynamic/g' {} +
-          find . -name "*.dart" -exec sed -i 's/InternalAppEventType/dynamic/g' {} +
-          find . -name "*.dart" -exec sed -i '/super.dispose()/a \ \ \ \ return;' {} +
+          find . -name "*.dart" -exec sed -i '/import.*cent_app.*/d' {} +
           
-          # 3. إعادة بناء بيئة الأندرويد وحل مشكلة connectivity_plus (صورة 12:32)
+          # 4. إعادة بناء الأندرويد وحقن المسارات (حل صورة 12:32)
           rm -rf android
           flutter create . --platforms android --project-name cent
-          
-          # 4. حقن مسارات Flutter إجبارياً للسيرفر (هذا هو مفتاح الحل الأخير)
           echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
           echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
           
-          # 5. ترقية Gradle لنسخة 8.0 لضمان التوافق
-          sed -i 's/gradle-.*-all.zip/gradle-8.0-all.zip/g' android/gradle/wrapper/gradle-wrapper.properties || true
-
-          # 6. جلب المكتبات وتطبيق الإصلاحات
+          # 5. جلب المكتبات النظيفة
           flutter pub get
-          dart fix --apply
 
-      - name: Final Execution (Victory or Defeat)
+      - name: Final Execution
         run: |
           export GRADLE_OPTS="-Xmx4096m -XX:MaxMetaspaceSize=1024m"
-          # أمر البناء الأخير لتجاوز كل شيء
           flutter build apk --release \
             --no-tree-shake-icons \
             --extra-front-end-options=--no-sound-null-safety \
             --extra-gen-snapshot-options=--no-sound-null-safety
 
-      - name: Upload Final Success APK
+      - name: Upload Final APK
         uses: actions/upload-artifact@v4
         with:
-          name: Cent-Final-Success-APK
+          name: Cent-Final-Success
           path: build/app/outputs/flutter-apk/*.apk
-          if-no-files-found: error
           
